tests/paczka1/small_fuzzy/86766786.err
Error in line 1: dNrntlcId S736 8,3
Error in line 7: U5vheGPZk S397 5,3
Error in line 12: S39 A450 0,
